New  average widgets for numismatics
Signed-off-by: Alejandro Peña Carbonell <alex@render.es>

--- a/lib/dedalo/extras/numisdata/widgets/get_archive_weights/css/get_archive_weights.less
+++ b/lib/dedalo/extras/numisdata/widgets/get_archive_weights/css/get_archive_weights.less
@@ -5,14 +5,20 @@
 .get_archive_weights {
 	//background-color: #DEDEDE;
 	}
-	.get_archive_weights_total {
-		//font-weight: bold;
-		padding-left: 15px;
+	.sum_weights {
+		font-weight: bold;
+		font-size: 120%;
+		//padding-left: 15px;
 	}
-	.get_archive_weights_max {
-		padding-left: 10px;
-		font-size: 80%;
-		color: #9C9C9C;
+	.get_archive_weights {
+		//padding-left: 10px;
+		//font-size: 80%;
+		color: #555555;
 		font-family: "Arial";
+	}
+	.update_info{
+	top: -15px;
+	position: absolute;
+	right: 0;
 	}
 
