--- a/lib/dedalo/extras/numisdata/widgets/get_archive_weights/css/get_archive_weights.css
+++ b/lib/dedalo/extras/numisdata/widgets/get_archive_weights/css/get_archive_weights.css
@@ -1,12 +1,16 @@
 /* WIDGET SUM_DATES
 --------------------------------------- */
-.get_archive_weights_total {
-  padding-left: 15px;
+.sum_weights {
+  font-weight: bold;
+  font-size: 120%;
 }
-.get_archive_weights_max {
-  padding-left: 10px;
-  font-size: 80%;
-  color: #9C9C9C;
+.get_archive_weights {
+  color: #555555;
   font-family: "Arial";
+}
+.update_info {
+  top: -15px;
+  position: absolute;
+  right: 0;
 }
 /*# sourceMappingURL=get_archive_weights.css.map */
