--- a/lib/dedalo/extras/numisdata/widgets/get_archive_weights/html/get_archive_weights_edit.phtml
+++ b/lib/dedalo/extras/numisdata/widgets/get_archive_weights/html/get_archive_weights_edit.phtml
@@ -3,73 +3,36 @@
 	# VISUALIZADOR HTML	
 	$html ='';
 	
-	$html .= "<div id=\"widget_sum_dates\" class=\"widget_sum_dates\">";
+	$html .= "<div id=\"get_archive_weights\" class=\"get_archive_weights\">";
 		
 		#
 		# SUM_INTERVALS TO TEXT
-		$html .= "<span class=\"sum_dates_total\">";
-		if($sum_intervals->y>0) {
-			$html .= $sum_intervals->y;
-			$add_label = label::get_label('anyos', $lang);
-			if($sum_intervals->y == 1) $add_label = label::get_label('anyo', $lang);
+		$html .= "<div class=\"sum_weights\">";
+		if($media_weight>0) {
+			$add_label = label::get_label('average', $lang).': ';
 			$html .= ' <span class="css_date label_range">'.$add_label.'</span> ';
+			$html .= $media_weight;
 		}
-		if($sum_intervals->m>0) {
-			$html .= $sum_intervals->m;
-			$add_label = label::get_label('meses', $lang);
-			if($sum_intervals->m == 1) $add_label = label::get_label('mes', $lang);
+		$html .= "</div>";//end sum_dates_total
+		$html .= "<span class=\"get_archive_weights\">";
+		if($max_weight>0) {
+			$add_label = label::get_label('max', $lang).': ';;
 			$html .= ' <span class="css_date label_range">'.$add_label .'</span> ';
+			$html .= $max_weight;
 		}
-		if($sum_intervals->d>0) {
-			$html .= $sum_intervals->d;
-			$add_label = label::get_label('dias', $lang);
-			if($sum_intervals->d == 1) $add_label = label::get_label('dia', $lang);
+		if($min_weight>0) {
+			$add_label = label::get_label('min', $lang).': ';;
 			$html .= ' <span class="css_date label_range">'.$add_label.'</span> ';
+			$html .= $min_weight;
+		}
+		if($total_elements>0) {
+			$add_label = label::get_label('items', $lang).': ';;
+			$html .= ' <span class="css_date label_range">'.$add_label.'</span> ';
+			$html .= $total_elements;
 		}
 		$html .= "</span>";//end sum_dates_total
 
-
-		#
-		# USER NOTIFY WHEN ESTIMATED TIME IS CALCULATED		
-		if(!empty($sum_estitmated_time_add)) {
-
-			$sum_estitmated_time_add_text = "";
-			if($sum_estitmated_time_add->y >0) {
-				$add_label = label::get_label('anyos', $lang);
-				if($sum_estitmated_time_add->y == 1) $add_label = label::get_label('anyo', $lang);
-				$sum_estitmated_time_add_text .= $sum_estitmated_time_add->y .' '. $add_label;
-			}
-			if($sum_estitmated_time_add->m >0) {
-				$add_label = label::get_label('meses', $lang);
-				if($sum_estitmated_time_add->m == 1) $add_label = label::get_label('mes', $lang);
-				$sum_estitmated_time_add_text .= " ".$sum_estitmated_time_add->m .' '. $add_label;
-			}
-			if($sum_estitmated_time_add->d >0) {
-				$add_label = label::get_label('dias', $lang);
-				if($sum_estitmated_time_add->d == 1) $add_label = label::get_label('dia', $lang);
-				$sum_estitmated_time_add_text .= " ".$sum_estitmated_time_add->d .' '. $add_label;
-			}
-		}
-		if($modo==='edit' && (empty($sum_estitmated_time_add_text) || $estitmated_time_undefined===true)) {
-			$html .= " <span class=\"sum_dates_period_notes\">(";
-			$html .= "Temps estimat afegit: ";
-
-			if(!empty($sum_estitmated_time_add_text)){
-				$html .= $sum_estitmated_time_add_text;
-			}			
-			
-			if($estitmated_time_undefined===true) {
-				if(!empty($sum_estitmated_time_add_text)) $html .= " + ";
-				$html .= " indeterminat";
-			}			
-			$html .= ")</span>";	
-		}	
-		
-			
-	
 	$html .= "</div>";
-
-	#$html .= "<script>widget_sum_dates.activate_listener_value('".$component_target_tipo."')</script>";	// widget_sum.init('widget_sum'); 
 
 	print $html;
 
