fix style in get_archive_weights

--- a/lib/dedalo/extras/numisdata/widgets/get_archive_weights/css/get_archive_weights.less
+++ b/lib/dedalo/extras/numisdata/widgets/get_archive_weights/css/get_archive_weights.less
@@ -6,7 +6,7 @@
 	//background-color: #DEDEDE;
 	}
 	.sum_weights {
-		font-weight: bold;
+		//font-weight: bold;
 		font-size: 120%;
 		//padding-left: 15px;
 	}
