Fix component_json old code to use jsoneditor lib as js module

--- a/core/page/css/layout/layout.less
+++ b/core/page/css/layout/layout.less
@@ -1597,6 +1597,28 @@
 	}
 
 
+// component_json
+	.component_json {
+
+		.button_save {
+			height: 34px;
+			position: absolute;
+			top: 1px;
+			right: 1px;
+			z-index: 1;
+			padding-left: 2em;
+			padding-right: 2em;
+			background-color: #b7d2fd;
+			border: 1px solid #3883fa;
+			color: black;
+		}
+
+    z-index: 1;
+
+		.jsoneditor {
+			    min-height: 30vh;
+		}
+	}
 
 
 
