Removes button remove overlap in input text and text area

--- a/core/page/css/layout/layout.less
+++ b/core/page/css/layout/layout.less
@@ -1115,9 +1115,9 @@
 
 		& ~ .remove.display_none {
 			.display_block;
-			position: absolute;
-			right: 0.5em;
-			top: 0.5em;
+			//position: absolute;
+			//right: 0.5em;
+			//top: 0.5em;
 			//opacity: 1;
 			//background-color: #fefefe;
 		}
@@ -1127,9 +1127,9 @@
 
 		& ~ .display_none.remove {
 			.display_block;
-			position: absolute;
-			right: 1em;
-			top: 0.20em;
+			//position: absolute;
+			//right: 1em;
+			//top: 0.20em;
 		}
 	}
 
@@ -1601,16 +1601,16 @@
 	.component_json {
 
 		.button_save {
-			height: 34px;
+			height: 26px;
 			position: absolute;
-			top: 1px;
-			right: 1px;
+			top: 5px;
+			right: 6px;
 			z-index: 1;
-			padding-left: 2em;
-			padding-right: 2em;
+			padding-left: 1.7em;
+			padding-right: 1.7em;
 			background-color: #b7d2fd;
 			border: 1px solid #3883fa;
-			color: black;
+			color: #fff;
 		}
 
     z-index: 1;
