--- a/core/page/css/layout/layout.less
+++ b/core/page/css/layout/layout.less
@@ -1110,40 +1110,40 @@
 
 
 // input focus show next item (button remove)
-	input:focus {
-		padding-right: 1.75em;
+	// input:focus {
+	// 	padding-right: 1.75em;
 
-		& ~ .remove.display_none {
-			.display_block;
-			//position: absolute;
-			//right: 0.5em;
-			//top: 0.5em;
-			//opacity: 1;
-			//background-color: #fefefe;
-		}
-	}
+	// 	& ~ .remove.display_none {
+	// 		.display_block;
+	// 		//position: absolute;
+	// 		//right: 0.5em;
+	// 		//top: 0.5em;
+	// 		//opacity: 1;
+	// 		//background-color: #fefefe;
+	// 	}
+	// }
 
-	.contenteditable:focus {
+	// .contenteditable:focus {
 
-		& ~ .display_none.remove {
-			.display_block;
-			//position: absolute;
-			//right: 1em;
-			//top: 0.20em;
-		}
-	}
+	// 	& ~ .display_none.remove {
+	// 		.display_block;
+	// 		//position: absolute;
+	// 		//right: 1em;
+	// 		//top: 0.20em;
+	// 	}
+	// }
 
-	input:focus ~ .display_none.email_send {
-		.display_block;
-	}
+	// input:focus ~ .display_none.email_send {
+	// 	.display_block;
+	// }
 
-	input:focus ~ .display_none.go_link {
-		.display_block;
-	}
+	// input:focus ~ .display_none.go_link {
+	// 	.display_block;
+	// }
 
-	.display_block {
-		display: block !important;
-	}
+	// .display_block {
+	// 	display: block !important;
+	// }
 
 
 
