restore the delete button function

--- a/core/page/css/layout/layout.less
+++ b/core/page/css/layout/layout.less
@@ -917,6 +917,10 @@
 				&:before {
 					content: @fa-var-trash-alt;
 				}
+				position: absolute;
+				right: 0.5em;
+				top: 0.5em;
+
 			}
 			&.add {
 				.fa-icon;
