Adjust the image height in list css

--- a/lib/dedalo/common/css/common.less
+++ b/lib/dedalo/common/css/common.less
@@ -402,7 +402,7 @@ mark {
 		background-position: center;
 		//background-color: white;
 
-		object-fit: none;
+		object-fit: contain;
     	object-position: center;
 
 		&:hover {
