--- a/lib/dedalo/tools/tool_description/css/tool_description.less
+++ b/lib/dedalo/tools/tool_description/css/tool_description.less
@@ -24,12 +24,12 @@ body {
 	background-size: 18px !important;
     background-position-y: 3px !important;
     background-position-x: 6px !important;
-} 
+}
 
 /* TOOL_DESCRIPTION CASE
 	--------------------------------------------- */
 	.html_page_wrap_tool_description .content_data {
-		width: 100%;		
+		width: 100%;
 	}
 
 
@@ -40,7 +40,7 @@ body {
 		}
 		.header_tool .select_fast_lang_switch {
 			float: left;
-			position: relative;	
+			position: relative;
 			top: 3px;
 			left: 10px;
 			text-transform: capitalize;
@@ -78,13 +78,29 @@ body {
 		padding: 0;
 		display: block;
 		position: absolute;
-		
+
 		//width: 100%;
-		//height: 96%;		
+		//height: 96%;
 		//overflow: hidden;
-		
+
 		width: 99.9%;
 		height: ~"calc(100% - 30px)";
+
+
+		.img_image_portal_list_view_mosaic {
+			height: 500px;
+   			//width: auto;
+		}
+		.css_wrap_image_portal_list_view_mosaic {
+			>.content_data {
+				background-color: transparent !important;
+			}
+		}
+		.css_wrap_portal {
+			>.content_data {
+				padding-top: 1em;
+			}
+		}
 	}
 
 
@@ -96,7 +112,7 @@ body {
 		padding-left: 4px;
 		padding-right: 4px;
 		z-index: 10;
-		min-width: 400px;		
+		min-width: 400px;
 		margin-right: 72px;
 		margin-left: 151px;
 		width: auto;
@@ -125,10 +141,10 @@ body {
 	.html_page_wrap_tool_description .toponymy_list li {
 		width: 100%;
 	}
-	
+
 
 /* COMMON
------------------------------------------------------- 
+------------------------------------------------------
 	// All components containers default
 	.component_container {
 		//background-color: #EBD4F5;
@@ -141,7 +157,7 @@ body {
 		width: 100%;
 	}
 */
-	
+
 
 
 
