--- a/core/menu/css/menu.less
+++ b/core/menu/css/menu.less
@@ -52,7 +52,7 @@ background-color: #FFFF00;
 		left:0px;
 		display: flex;
 		align-items: center;
-		width: 100%;
+		width: calc(100vw - 1em);
 		height: 2.1em;
 		box-shadow: 0 2px 3px rgba(0, 0, 0, 0.4);
 		background: #2e2e2e;
@@ -116,7 +116,6 @@ background-color: #FFFF00;
 				//display: none !important;
 			}
 
-
 			>.logged_user_name {
 				color: #c9c9c9;
 				cursor: pointer;
@@ -164,6 +163,36 @@ background-color: #FFFF00;
 
 			>.section_label {
 				line-height: 2em;
+				cursor: pointer;
+				font-weight: bold;
+				margin-right: 1.5em;
+				padding-top: 1px;
+
+				&:hover {
+					opacity: 1;
+				}
+				&.active {
+					opacity: 0.4;
+				}
+
+				&:before {
+					// content: " ";
+					// //background-image: url(../../themes/default/icons/bug.svg);
+					// .background_icon('bug.svg');
+					// background-size: contain;
+					// background-repeat: no-repeat;
+					// background-position: center;
+					// width: 1em;
+					// height: 1em;
+					// float: right;
+					// opacity: 0.7;
+					.icon_svg;
+					.background_icon('list_white.svg');
+					height: 100%;
+					float: left;
+					margin-right: 0.4em;
+					//margin-top: -1px;
+				}
 			}
 
 			>.button_toggle_inspector {
