--- a/core/page/css/layout/layout.less
+++ b/core/page/css/layout/layout.less
@@ -85,7 +85,7 @@
 				outline-offset: 0;
 			}
 			font-size: 1em;
-			height: 2.5em;
+			height: 2.0em;
 			width: 100%;
 			margin-right: 0.5em;
 
@@ -549,9 +549,10 @@
 					>div {
 						flex: 1 1 100%;
 			   			display: flex;
+			   			flex-wrap: wrap;
 			   			align-items: center;
 			   			justify-content: flex-end;
-			   			height: @height_line;
+			   			min-height: @height_line;
 					}
 
 					a {
@@ -1610,7 +1611,7 @@
 			padding-right: 1.7em;
 			background-color: #b7d2fd;
 			border: 1px solid #3883fa;
-			color: #fff;
+			color: #3883fa;
 		}
 
     z-index: 1;
@@ -1619,6 +1620,18 @@
 			    min-height: 30vh;
 		}
 	}
+
+
+// component pdf
+	.component_pdf {
+
+		.pdf_viewer_frame {
+			width: 100%;
+	    	height: 15em;
+		}
+	}//end .component_pdf
+
+
 
 
 
