Moves page_globals var from page to eviroment file

--- a/core/page/html/page.phtml
+++ b/core/page/html/page.phtml
@@ -9,9 +9,11 @@
 	<div id="main" class="hide"></div>
 	<div id="debug" class="debug hide"></div>
 </body>
+<?php /*
 <script>
 var page_globals=<?php echo SHOW_DEBUG===true ? json_encode($page_globals, JSON_PRETTY_PRINT) : json_encode($page_globals) ?>;
 </script>
+*/ ?>
 <script defer="defer" src="<?php echo DEDALO_CORE_URL ?>/common/js/enviroment.js.php"></script>
 <script type="module">
 	const t0 = performance.now()
