--- a/core/dd/html/dd_list.phtml
+++ b/core/dd/html/dd_list.phtml
@@ -19,18 +19,18 @@ print css::build_tag(DEDALO_CORE_URL .'/dd/css/dd_list.css', null, false);
 
 <script type="text/javascript">
 	<?php
-	$page_globals = new stdClass();
-		# version
-		$page_globals->dedalo_version 			= DEDALO_VERSION;
-		# lang
-		$page_globals->dedalo_application_lang 	= DEDALO_APPLICATION_LANG;
-		$page_globals->dedalo_data_lang 		= DEDALO_DATA_LANG;
-		$page_globals->dedalo_data_nolan 		= DEDALO_DATA_NOLAN;
-		# modo
-		$page_globals->modo 					= isset($modo) ? $modo : null;
-	?>
-	const page_globals=<?php echo SHOW_DEBUG===true ? json_encode($page_globals, JSON_PRETTY_PRINT) : json_encode($page_globals) ?>;
+	// $page_globals = new stdClass();
+	// 	# version
+	// 	$page_globals->dedalo_version 			= DEDALO_VERSION;
+	// 	# lang
+	// 	$page_globals->dedalo_application_lang 	= DEDALO_APPLICATION_LANG;
+	// 	$page_globals->dedalo_data_lang 		= DEDALO_DATA_LANG;
+	// 	$page_globals->dedalo_data_nolan 		= DEDALO_DATA_NOLAN;
+	// 	# modo
+	// 	$page_globals->modo 					= isset($modo) ? $modo : null;
 
+	/*const page_globals=<?php echo SHOW_DEBUG===true ? json_encode($page_globals, JSON_PRETTY_PRINT) : json_encode($page_globals) ?>;*/
+	?>
 	// VARS de mensajes de aviso multi-idioma
 	const el_descriptor_tiene_hijos_title 				= '<?php echo msgJS($el_descriptor_tiene_hijos_title) ?>' ;
 	const el_descriptor_tiene_indexaciones_title		= '<?php echo msgJS($el_descriptor_tiene_indexaciones_title) ?>' ;
