Reformulate the menu with don't heritage nodes

--- a/core/page/css/layout/layout.less
+++ b/core/page/css/layout/layout.less
@@ -7,6 +7,11 @@
 	@color_grey_medium : #e6e6e6; // used in component actibe background
 
 
+// general styles
+
+	.mark{
+		font-style: italic;
+	}
 
 // mixins
 	// background_icon function. Receive icon full name like 'bug.svg'
