Fix some css issues an fine tune styles for images

--- a/core/page/css/layout/layout.less
+++ b/core/page/css/layout/layout.less
@@ -725,7 +725,7 @@
 
 		&.list {
 
-			&.component_image, &.component_av {
+			&.component_image, &.component_av, &.component_svg {
 				padding: 0;
 				background-color: #ffffff;
 				text-align: center;
@@ -1672,11 +1672,10 @@
 			border: 1px solid #3883fa;
 			color: #3883fa;
 		}
-
-    z-index: 1;
+    	z-index: 1;
 
 		.jsoneditor {
-			    min-height: 30vh;
+			//min-height: 30vh;
 		}
 	}
 
