--- a/core/dd/css/dd_edit.less
+++ b/core/dd/css/dd_edit.less
@@ -60,7 +60,8 @@ input, textarea {
 
 .wraper_propiedades {
 	width: 100%;
-	height: 42vh;
+	height: 50vh;
+	//height: 100%;
 	//background-color: #ccca76;
 	}
 	.wraper_propiedades .propiedades_label {
@@ -136,6 +137,18 @@ input, textarea {
 		//height:440px;
 	}
 }
+
+
+#otraInfo {
+	//height: 50vh;
+
+	tr, td {
+		//height: inherit;
+	}
+
+
+}
+
 
 
 
