--- a/core/dd/css/dd_list.less
+++ b/core/dd/css/dd_list.less
@@ -529,19 +529,52 @@ img.btnEdit { width:15px; height:15px;  margin:0px; margin-top:-1px; cursor:poin
 // header
 	.header {
 		width: 100%;
-		height: 3em;
+		height: 3rem;
 		margin: 0;
 		padding: 0;
+		padding-left: 1em;
+		padding-right: 1em;
 		background-color: #f48c1c;
 		color: white;
 		display: flex;
-		align-items: baseline;
+		align-items: center;
 
-		>h2 {
-			padding: .25em;
-			padding-left: 1em;
+		>* {
+			line-height: 2rem;
+			//background-color: #99BED2;
+		}
+
+		>h2.title {
+			padding: 0;
 			padding-right: 1em;
 		}
+
+		>a.export {
+			padding-top: 0.5rem;
+		}
+
+		.spacer {
+			//width: 100%;
+			//flex: 1 0;
+			//background-color: green;
+			//height: 2em;
+			flex: 1;
+		}
+
+		ul.select_mode {
+			display: flex;
+			float: right;
+
+			>li {
+				padding-left: 1em;
+			}
+		}
+
 	}
+
+
+
+
+
 
 
