Add diameter to the numisdata widget get_archive_weights

--- a/lib/dedalo/extras/numisdata/widgets/get_archive_weights/css/get_archive_weights.less
+++ b/lib/dedalo/extras/numisdata/widgets/get_archive_weights/css/get_archive_weights.less
@@ -11,7 +11,7 @@
 		//padding-left: 15px;
 	}
 	.get_archive_weights {
-		//padding-left: 10px;
+		padding-right: 5px;
 		//font-size: 80%;
 		color: #555555;
 		font-family: "Arial";
@@ -20,5 +20,11 @@
 	top: -15px;
 	position: absolute;
 	right: 0;
+	}
+
+	.get_archive_diameter{
+		border-left: 1px solid rgb(200, 200, 200);
+		padding-left: 5px;
+
 	}
 
