--- a/lib/dedalo/extras/numisdata/widgets/get_archive_weights/css/get_archive_weights.css
+++ b/lib/dedalo/extras/numisdata/widgets/get_archive_weights/css/get_archive_weights.css
@@ -4,6 +4,7 @@
   font-size: 120%;
 }
 .get_archive_weights {
+  padding-right: 5px;
   color: #555555;
   font-family: "Arial";
 }
@@ -11,5 +12,9 @@
   top: -15px;
   position: absolute;
   right: 0;
+}
+.get_archive_diameter {
+  border-left: 1px solid #c8c8c8;
+  padding-left: 5px;
 }
 /*# sourceMappingURL=get_archive_weights.css.map */
