--- a/lib/dedalo/extras/numisdata/widgets/get_archive_weights/html/get_archive_weights_edit.phtml
+++ b/lib/dedalo/extras/numisdata/widgets/get_archive_weights/html/get_archive_weights_edit.phtml
@@ -10,7 +10,7 @@
 		$html .= "<div class=\"sum_weights\">";
 		if(isset($media_weight) && $media_weight>0) {
 			//$add_label = label::get_label('average', $lang).': ';
-			//$html .= ' <span class="css_date label_range">'.$add_label.'</span> ';
+			$html .= ' <span class="css_date label_range">'.$data_weights_label.':</span> ';
 			$html .= $media_weight;
 		}
 		$html .= "</div>";//end sum_dates_total
@@ -27,10 +27,45 @@
 			$html .= ' <span class="css_date label_range">'.$add_label.'</span> ';
 			$html .= $min_weight;
 		}
-		if(isset($total_elements) && $total_elements>0) {
+		if(isset($total_elements_weights) && $total_elements_weights>0) {
 			$add_label = ' | n: ';
 			$html .= ' <span class="css_date label_range">'.$add_label.'</span> ';
-			$html .= $total_elements;
+			$html .= $total_elements_weights;
+		}
+		$html .= "</span>";//end sum_dates_total
+
+	$html .= "</div>";
+
+
+
+	$html .= "<div id=\"get_archive_diameter\" class=\"get_archive_diameter\">";
+
+		#
+		# SUM_INTERVALS TO TEXT
+		$html .= "<div class=\"sum_weights\">";
+		if(isset($media_diameter) && $media_diameter>0) {
+			//$add_label = label::get_label('average', $lang).': ';
+			$html .= ' <span class="css_date label_range">'.$data_diameter_label.':</span> ';
+			$html .= $media_diameter;
+		}
+		$html .= "</div>";//end sum_dates_total
+		$html .= "<span class=\"get_archive_weights\">";
+		if(isset($max_diameter) && $max_diameter>0) {
+			// $add_label = label::get_label('max', $lang).'max: ';;
+			$add_label = 'max: ';
+			$html .= ' <span class="css_date label_range">'.$add_label .'</span> ';
+			$html .= $max_diameter;
+		}
+		if(isset($min_diameter) && $min_diameter>0) {
+			//$add_label = label::get_label('min', $lang).'min: ';
+			$add_label = ' | min: ';
+			$html .= ' <span class="css_date label_range">'.$add_label.'</span> ';
+			$html .= $min_diameter;
+		}
+		if(isset($total_elements_diameter) && $total_elements_diameter>0) {
+			$add_label = ' | n: ';
+			$html .= ' <span class="css_date label_range">'.$add_label.'</span> ';
+			$html .= $total_elements_diameter;
 		}
 		$html .= "</span>";//end sum_dates_total
 
