fix min-width css in sort_tool

--- a/lib/dedalo/tools/tool_sort/css/tool_sort.css
+++ b/lib/dedalo/tools/tool_sort/css/tool_sort.css
@@ -142,6 +142,7 @@ body {
 }
 .rows_container {
   overflow: unset !important;
+  min-width: 550px;
 }
 .rows_container > .row_container {
   width: 100%;
