--- a/lib/dedalo/tools/tool_sort/css/tool_sort.less
+++ b/lib/dedalo/tools/tool_sort/css/tool_sort.less
@@ -245,6 +245,7 @@ body {
 // rows_container
 	.rows_container {
 		overflow: unset !important;
+		min-width: 550px;
 		
 		>.row_container {
 			//display: flex;
